<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/ic_star_empty_24dp"
            android:title="Favourite" />
        <item
            android:id="@+id/nav_new"
            android:icon="@drawable/ic_add_black_24dp"
            android:title="New House" />
        <item
            android:id="@+id/nav_owned"
            android:icon="@drawable/ic_place_black_24dp"
            android:title="My Houses" />

    </group>


</menu>
